--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -805,10 +805,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6bd2eb7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ids' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 40\u001b[39m\n\u001b[32m     37\u001b[39m f[\u001b[32m0\u001b[39m::pf3.DOF] += f[\u001b[32m2\u001b[39m::pf3.DOF]/LD\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m#applying thrust\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m mtr, mid \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(up.motors, \u001b[43mids\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mmotors\u001b[39m\u001b[33m\"\u001b[39m]): \u001b[38;5;66;03m#checking coordinate correspondence\u001b[39;00m\n\u001b[32m     41\u001b[39m     f[\u001b[32m0\u001b[39m::pf3.DOF][mid[\u001b[32m0\u001b[39m]] = FT/\u001b[32m2\u001b[39m\n\u001b[32m     42\u001b[39m     f[\u001b[32m0\u001b[39m::pf3.DOF][mid[\u001b[32m1\u001b[39m]] = FT/\u001b[32m2\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'ids' is not defined"
+     ]
+    }
+   ],
    "source": [
     "n=2.5\n",
     "#boundary conditions = fix at y of fuselage boundary\n",
@@ -844,6 +856,17 @@
     "f[2::pf3.DOF][botskids.flatten()] = Ltot*L.T.flatten()\n",
     "f[3::pf3.DOF][botskids.flatten()] = Ltot*Mx.T.flatten()\n",
     "f[4::pf3.DOF][botskids.flatten()] = Ltot*My.T.flatten()\n",
+    "\n",
+    "#applying drag\n",
+    "f[0::pf3.DOF] += f[2::pf3.DOF]/LD\n",
+    "\n",
+    "#applying thrust\n",
+    "for mtr, mid in zip(up.motors, mids): #checking coordinate correspondence\n",
+    "    f[0::pf3.DOF][mid[0]] = FT/2\n",
+    "    f[0::pf3.DOF][mid[1]] = FT/2\n",
+    "\n",
+    "#applying landing load\n",
+    "f[2::pf3.DOF][lgid] += nl*G0*MTOM/2\n",
     "\n",
     "#applying weight\n",
     "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
