--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -805,22 +805,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6bd2eb7f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ids' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 40\u001b[39m\n\u001b[32m     37\u001b[39m f[\u001b[32m0\u001b[39m::pf3.DOF] += f[\u001b[32m2\u001b[39m::pf3.DOF]/LD\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m#applying thrust\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m mtr, mid \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(up.motors, \u001b[43mids\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mmotors\u001b[39m\u001b[33m\"\u001b[39m]): \u001b[38;5;66;03m#checking coordinate correspondence\u001b[39;00m\n\u001b[32m     41\u001b[39m     f[\u001b[32m0\u001b[39m::pf3.DOF][mid[\u001b[32m0\u001b[39m]] = FT/\u001b[32m2\u001b[39m\n\u001b[32m     42\u001b[39m     f[\u001b[32m0\u001b[39m::pf3.DOF][mid[\u001b[32m1\u001b[39m]] = FT/\u001b[32m2\u001b[39m\n",
-      "\u001b[31mNameError\u001b[39m: name 'ids' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n=2.5\n",
     "#boundary conditions = fix at y of fuselage boundary\n",
@@ -875,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "486cd3d0",
    "metadata": {},
    "outputs": [],
@@ -901,19 +889,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "0c6b00b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "910e1e8467ca492688a96adb134a70fb",
+       "model_id": "f3f214407a1342be9ecc9b7de1a053dd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252ac589430_2&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252abd374d0_4&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -969,19 +957,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "f0b548e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18126501d1e44585b411b96f8253e17a",
+       "model_id": "7a81da8255634a9ca8b6201242d37f1f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252abd35640_3&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252a4accb90_5&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
