rail springs invert direction

--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -690,6 +690,7 @@
    ],
    "source": [
     "ks_motmount =  p3g.SpringProp(INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF) #TODO: here orientation will be \"fun\"\n",
+    "ks_bmount = p3g.SpringProp(INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, 0, 0, 1, 0, 1, 1)\n",
     "\n",
     "#3) beams\n",
     "prop_rail = p3g.OrientedBeamProp(1, 0, 0)\n",
@@ -721,12 +722,13 @@
     "    pfor.xyez = dir[2]\n",
     "    return pfor\n",
     "\n",
+    "batmount = \"bm\"\n",
     "#element dictionary\n",
     "eleProps = {\"quad\":{spar:psp.isotropic_plate(thickness=t_spar, E=E, nu=NU, rho=RHO, calc_scf=True), \n",
     "                    skin:psp.isotropic_plate(thickness=t_skin, E=E, nu=NU, rho=RHO, calc_scf=True),\n",
     "                    panelPlate:psp.isotropic_plate(thickness=t_plate, E=E, nu=NU, rho=RHO, calc_scf=True), \n",
     "                    panelRib:psp.isotropic_plate(thickness=t_rib, E=E, nu=NU, rho=RHO, calc_scf=True)},\n",
-    "            \"spring\":{mount:ks_motmount},\n",
+    "            \"spring\":{mount:ks_motmount, batmount:ks_bmount},\n",
     "            \"beam\":{batteryRail:prop_rail, panelFlange:prop_flange_or}, \n",
     "            \"mass\":{battery:lambda m:m, motor:motormass, lg:lgmass, hinge:hingemass}}\n",
     "print(mount)"
@@ -756,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "1d4dc7cb",
    "metadata": {},
    "outputs": [],
@@ -766,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "2f4becfd",
    "metadata": {},
    "outputs": [],
@@ -776,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "135f04cd",
    "metadata": {},
    "outputs": [],
@@ -786,7 +788,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "id": "5ce43669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#splitting the battery function in 2 to see where the trouble is\n",
+    "def only_rails(mesh, midflids, dz, rail, railmount):\n",
+    "    zaxis = gcl.Direction3D(0,0,1)\n",
+    "    #translated points to serve as center of the rails\n",
+    "    transl = [zaxis.step(mesh.nodes[i], dz) for i in midflids] \n",
+    "    beamids = mesh.register(transl)\n",
+    "    #mesh.beam_interconnect(beamids, rail)\n",
+    "    mesh.spring_connect(beamids, midflids, railmount)\n",
+    "    return transl, beamids\n",
+    "\n",
+    "def only_bats(mesh, midflids, beamids, a1, a2, f2, totmass, batmount, bat):\n",
+    "    zaxis = gcl.Direction3D(0,0,1)\n",
+    "    #batteries - harder job. We need to define the local battery area\n",
+    "    #continuous attachment for now - subject to change\n",
+    "    props = dict()\n",
+    "    dzs = dict()\n",
+    "    for i in beamids:\n",
+    "        y = mesh.nodes[i].y\n",
+    "        y0 = mesh.nodes[midflids[0]].y\n",
+    "        ymax = mesh.nodes[midflids[-1]].y\n",
+    "        yfrac = (y-y0)/(ymax-y0)\n",
+    "        a = a2*yfrac+(1-yfrac)*a1 #linear interpolation of battery a\n",
+    "        #battery volume proportionality - july 10th page TODO:SUS\n",
+    "        prop = a**2*np.sqrt(3)/4+a*np.sqrt(3)/2*f2-(2*abs(dz)+din)**2*np.sqrt(3)/12\n",
+    "        assert prop>0 #if prop<0, then we have a prob - foil too thin at the tip\n",
+    "        props[i] = prop\n",
+    "        dzs[i] = np.sign(dz)*a*np.sqrt(3)/3-dz #oriented distance from the rail to the battery centroid\n",
+    "    propmass = totmass/(2*ntrig+1)/sum(props.values()) #how much mass a unit prop means\n",
+    "    batids = list()\n",
+    "    for i in beamids:\n",
+    "        batpt = zaxis.step(mesh.nodes[i], dzs[i])\n",
+    "        batid = mesh.register([batpt])\n",
+    "        #assigning the variable mass to the battery using protocol\n",
+    "        mesh.pointmass_attach(batid[0], bat, props[i]*propmass)\n",
+    "        mesh.spring_connect([i], batid, batmount)\n",
+    "        batids.append(batid[0])\n",
+    "    return batids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "709404b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beamids, batids = [[]]*(2*ntrig+1), [[]]*(2*ntrig+1)\n",
+    "for i, ids in zip(range(1,2*ntrig+1,2), sbci[1:-1]): #bottom batteries\n",
+    "    _, beamids[i] = only_rails(mesh, ids, dz, batteryRail, batmount)\n",
+    "for i, ids in  zip(range(0,2*ntrig+1,2), stci):\n",
+    "    _, beamids[i] = only_rails(mesh, ids, -dz, batteryRail, batmount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "e2a6def5",
    "metadata": {},
    "outputs": [],
@@ -805,10 +867,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "6bd2eb7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-396820.38674052124\n"
+     ]
+    }
+   ],
    "source": [
     "n=2.5\n",
     "#boundary conditions = fix at y of fuselage boundary\n",
@@ -858,12 +928,14 @@
     "\n",
     "#applying weight\n",
     "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
-    "f+=weight"
+    "f+=weight\n",
+    "\n",
+    "print(weight.sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "486cd3d0",
    "metadata": {},
    "outputs": [],
@@ -896,12 +968,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3f214407a1342be9ecc9b7de1a053dd",
+       "model_id": "c066848a1bfc4361a46a34efe68d235f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252abd374d0_4&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:53878/index.html?ui=P_0x29c61c49a00_3&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -957,19 +1029,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "f0b548e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a81da8255634a9ca8b6201242d37f1f",
+       "model_id": "3447558d20b54e3baeb6953766b7b9ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252a4accb90_5&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:53878/index.html?ui=P_0x29c02acd220_4&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
