--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -67,8 +67,8 @@
     "#geometry settings\n",
     "dz = .015 #inwards z offset of battery rail\n",
     "din = .010 #inner diameter of (threaded) battery rail\n",
-    "cspacing = .25 #chordwise panel rib spacing\n",
-    "bspacing = 1.33 #spanwise panel rib spacing\n",
+    "cspacing = .5 #chordwise panel rib spacing\n",
+    "bspacing = 2 #spanwise panel rib spacing\n",
     "ribflange = 0.0125 #rib flange length, excluding bends at corners\n",
     "motormass = 1000\n",
     "lgmass = 5000\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c6a47caa",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eb46f935",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "317f6cc7",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "35cd0f99",
    "metadata": {},
    "outputs": [],
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1d4dc7cb",
    "metadata": {},
    "outputs": [],
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2f4becfd",
    "metadata": {},
    "outputs": [],
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "135f04cd",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5ce43669",
    "metadata": {},
    "outputs": [],
@@ -799,11 +799,11 @@
     "    #translated points to serve as center of the rails\n",
     "    transl = [zaxis.step(mesh.nodes[i], dz) for i in midflids] \n",
     "    beamids = mesh.register(transl)\n",
-    "    #mesh.beam_interconnect(beamids, rail)\n",
-    "    mesh.spring_connect(beamids, midflids, railmount)\n",
+    "    mesh.beam_interconnect(beamids, rail)\n",
+    "    #mesh.spring_connect(beamids, midflids, railmount)\n",
     "    return transl, beamids\n",
     "\n",
-    "def only_bats(mesh, midflids, beamids, a1, a2, f2, totmass, batmount, bat):\n",
+    "def only_bats(mesh, midflids, beamids, dz, a1, a2, f2, totmass, batmount, bat):\n",
     "    zaxis = gcl.Direction3D(0,0,1)\n",
     "    #batteries - harder job. We need to define the local battery area\n",
     "    #continuous attachment for now - subject to change\n",
@@ -834,21 +834,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "709404b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "beamids, batids = [[]]*(2*ntrig+1), [[]]*(2*ntrig+1)\n",
     "for i, ids in zip(range(1,2*ntrig+1,2), sbci[1:-1]): #bottom batteries\n",
-    "    _, beamids[i] = only_rails(mesh, ids, dz, batteryRail, batmount)\n",
+    "    _, beamids[i] = only_bats(mesh, ids, ids, dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)\n",
     "for i, ids in  zip(range(0,2*ntrig+1,2), stci):\n",
-    "    _, beamids[i] = only_rails(mesh, ids, -dz, batteryRail, batmount)"
+    "    _, beamids[i] = only_bats(mesh, ids, ids, -dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "e2a6def5",
    "metadata": {},
    "outputs": [],
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "6bd2eb7f",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-396820.38674052124\n"
+      "-397299.5914714418\n"
      ]
     }
    ],
@@ -935,10 +935,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "486cd3d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marri\\AppData\\Local\\Temp\\ipykernel_38920\\1609823797.py:4: MatrixRankWarning: Matrix is exactly singular\n",
+      "  uu = ssl.spsolve(KC0uu, fu)\n"
+     ]
+    }
+   ],
    "source": [
     "#checks and solution\n",
     "KC0uu = KC0[bu, :][:, bu]\n",
@@ -961,23 +970,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "0c6b00b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c066848a1bfc4361a46a34efe68d235f",
+       "model_id": "f77b84ebced74bf19828405d2b1967f4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53878/index.html?ui=P_0x29c61c49a00_3&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50876/index.html?ui=P_0x2502fb24ec0_4&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30540\n"
+     ]
     }
    ],
    "source": [
@@ -994,9 +1010,9 @@
     "colors_s = [1]*len(edges_s)\n",
     "#beams\n",
     "edges_b = list()\n",
-    "for s in elements[\"spring\"]:\n",
+    "for s in elements[\"beam\"]:\n",
     "    edges_b.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
-    "colors_b = [2]*len(edges_s)\n",
+    "colors_b = [2]*len(edges_b)\n",
     "#quads\n",
     "edges_q = list()\n",
     "for s in elements[\"quad\"]:\n",
@@ -1024,28 +1040,36 @@
     "    cmap='jet',\n",
     "    show_scalar_bar=False,\n",
     "    background='w',\n",
-    ")"
+    ")\n",
+    "print(len(colors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "f0b548e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3447558d20b54e3baeb6953766b7b9ed",
+       "model_id": "bf06c0f5b16c4bd684aceb7194cc049a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53878/index.html?ui=P_0x29c02acd220_4&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50876/index.html?ui=P_0x2502ecd05f0_5&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30540\n"
+     ]
     }
    ],
    "source": [
@@ -1056,25 +1080,24 @@
     "nodey = y+u[1::pf3.DOF]\n",
     "nodez = z+w\n",
     "nodes = list(zip(nodex, nodey, nodez))\n",
-    "miny, maxy = 0,20\n",
     "\n",
     "'''handling each element separately at each elemnt type gets a diff colour'''\n",
     "#springs\n",
     "edges_s = list()\n",
     "for s in elements[\"spring\"]:\n",
-    "    if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
+    "    #if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
     "        edges_s.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
     "colors_s = [7]*len(edges_s)\n",
     "#beams\n",
     "edges_b = list()\n",
-    "for s in elements[\"spring\"]:\n",
-    "    if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
+    "for s in elements[\"beam\"]:\n",
+    "    #if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
     "        edges_b.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
-    "colors_b = [5]*len(edges_s)\n",
+    "colors_b = [5]*len(edges_b)\n",
     "#quads\n",
     "edges_q = list()\n",
     "for s in elements[\"quad\"]:\n",
-    "    if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
+    "    #if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
     "        edges_q.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
     "        edges_q.append([nid_pos[s.n2], nid_pos[s.n3]])\n",
     "        edges_q.append([nid_pos[s.n3], nid_pos[s.n4]])\n",
@@ -1099,7 +1122,8 @@
     "    cmap='jet',\n",
     "    show_scalar_bar=False,\n",
     "    background='w',\n",
-    ")"
+    ")\n",
+    "print(len(colors))"
    ]
   }
  ],
