--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -166,7 +166,7 @@
    "id": "0fd5f323",
    "metadata": {},
    "source": [
-    "Apply aerodynamic load on what you have"
+    "# Apply aerodynamic load on what you have"
    ]
   },
   {
@@ -251,6 +251,14 @@
     "pyvista.global_theme.axes.show = True\n",
     "pyvista.global_theme.anti_aliasing = 'fxaa'\n",
     "pyvista.global_theme.show_scalar_bar = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd86f3ae",
+   "metadata": {},
+   "source": [
+    "# Hide this"
    ]
   },
   {
@@ -409,7 +417,7 @@
    "id": "da650f41",
    "metadata": {},
    "source": [
-    "Smooth torsion, all good. Now, we plot only panel+spars."
+    "# Smooth torsion, all good. Now, we plot only panel+spars."
    ]
   },
   {
@@ -434,6 +442,14 @@
    "source": [
     "topflsh, topsksh, topflids, topskids = mc.panel(mesh, up.fft, up.frt, up.tft, up.trt, nb, nip, nf2, \n",
     "                                    panelPlate, skin, panelRib, panelFlange, up.surft, stci, cspacing, bspacing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a2b4fb1",
+   "metadata": {},
+   "source": [
+    "# Hide this"
    ]
   },
   {
@@ -675,8 +691,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bec6deab",
+   "metadata": {},
+   "source": [
+    "# Proven Geometry"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "eb46f935",
    "metadata": {},
    "outputs": [
@@ -736,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "317f6cc7",
    "metadata": {},
    "outputs": [],
@@ -748,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "35cd0f99",
    "metadata": {},
    "outputs": [],
@@ -758,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1d4dc7cb",
    "metadata": {},
    "outputs": [],
@@ -768,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2f4becfd",
    "metadata": {},
    "outputs": [],
@@ -778,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "135f04cd",
    "metadata": {},
    "outputs": [],
@@ -787,8 +811,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b92fba45",
+   "metadata": {},
+   "source": [
+    "# Bat"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5ce43669",
    "metadata": {},
    "outputs": [],
@@ -800,8 +832,8 @@
     "    transl = [zaxis.step(mesh.nodes[i], dz) for i in midflids] \n",
     "    beamids = mesh.register(transl)\n",
     "    mesh.beam_interconnect(beamids, rail)\n",
-    "    #mesh.spring_connect(beamids, midflids, railmount)\n",
-    "    return transl, beamids\n",
+    "    mesh.quad_connect(beamids, midflids, railmount)\n",
+    "    return beamids\n",
     "\n",
     "def only_bats(mesh, midflids, beamids, dz, a1, a2, f2, totmass, batmount, bat):\n",
     "    zaxis = gcl.Direction3D(0,0,1)\n",
@@ -834,21 +866,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "709404b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "beamids, batids = [[]]*(2*ntrig+1), [[]]*(2*ntrig+1)\n",
     "for i, ids in zip(range(1,2*ntrig+1,2), sbci[1:-1]): #bottom batteries\n",
-    "    _, beamids[i] = only_bats(mesh, ids, ids, dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)\n",
+    "    batids[i] = only_bats(mesh, ids, ids, dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)\n",
     "for i, ids in  zip(range(0,2*ntrig+1,2), stci):\n",
-    "    _, beamids[i] = only_bats(mesh, ids, ids, -dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)"
+    "    batids[i] = only_bats(mesh, ids, ids, -dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "76c38fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def single_spring(pt, id, dz, eleid):\n",
+    "    pt2 = gcl.Direction3D(0,0,1).step(pt, dz)\n",
+    "    id2 = mesh.register([pt2])[0]\n",
+    "    mesh.spring_connect([id], [id2], eleid)\n",
+    "\n",
+    "single_spring(mesh.nodes[stci[0][3]], stci[0][3], -.25, mount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "062bc3f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6300, 6301, 6302, 6303, 6304, 6305, 6306, 6307, 6308, 6309, 6310,\n",
+       "       6311, 6312, 6313, 6314, 6315, 6316, 6317, 6318, 6319, 6320, 6321,\n",
+       "       6322, 6323, 6324, 6325, 6326, 6327, 6328, 6329, 6330, 6331, 6332,\n",
+       "       6333, 6334, 6335, 6336])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "only_rails(mesh, stci[0], -dz, batteryRail, panelRib)\n",
+    "only_rails(mesh, stci[1], -dz, batteryRail, panelRib)\n",
+    "only_rails(mesh, stci[2], -dz, batteryRail, panelRib)\n",
+    "only_rails(mesh, sbci[1], dz, batteryRail, panelRib)\n",
+    "only_rails(mesh, sbci[2], dz, batteryRail, panelRib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "e2a6def5",
    "metadata": {},
    "outputs": [],
@@ -867,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "6bd2eb7f",
    "metadata": {},
    "outputs": [
@@ -875,7 +950,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-397299.5914714418\n"
+      "-397372.0836172189\n"
      ]
     }
    ],
@@ -935,19 +1010,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "486cd3d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\marri\\AppData\\Local\\Temp\\ipykernel_38920\\1609823797.py:4: MatrixRankWarning: Matrix is exactly singular\n",
-      "  uu = ssl.spsolve(KC0uu, fu)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#checks and solution\n",
     "KC0uu = KC0[bu, :][:, bu]\n",
@@ -970,19 +1036,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "0c6b00b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f77b84ebced74bf19828405d2b1967f4",
+       "model_id": "33b39d71fab24d3583e1bb26a5920dd1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50876/index.html?ui=P_0x2502fb24ec0_4&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:59087/index.html?ui=P_0x25ba3fc04d0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -992,7 +1058,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30540\n"
+      "31260\n"
      ]
     }
    ],
@@ -1046,19 +1112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "f0b548e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf06c0f5b16c4bd684aceb7194cc049a",
+       "model_id": "64e3a107684a4593b8b51cb3ceeff1fc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50876/index.html?ui=P_0x2502ecd05f0_5&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:59087/index.html?ui=P_0x25ba4b74e00_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1068,7 +1134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30540\n"
+      "31260\n"
      ]
     }
    ],
