--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -714,7 +714,7 @@
    ],
    "source": [
     "ks_motmount =  p3g.SpringProp(INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF) #TODO: here orientation will be \"fun\"\n",
-    "ks_bmount = p3g.SpringProp(INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, 0, 0, 1, 0, 1, 1)\n",
+    "ks_bmount = p3g.SpringProp(INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF)\n",
     "\n",
     "#3) beams\n",
     "prop_rail = p3g.OrientedBeamProp(1, 0, 0)\n",
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5ce43669",
    "metadata": {},
    "outputs": [],
@@ -866,16 +866,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "709404b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "beamids, batids = [[]]*(2*ntrig+1), [[]]*(2*ntrig+1)\n",
     "for i, ids in zip(range(1,2*ntrig+1,2), sbci[1:-1]): #bottom batteries\n",
-    "    batids[i] = only_bats(mesh, ids, ids, dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)\n",
+    "    batids[i] = only_bats(mesh, ids, ids, dz, a1, a2, f2, BAT_MASS_1WING, mount, battery)\n",
     "for i, ids in  zip(range(0,2*ntrig+1,2), stci):\n",
-    "    batids[i] = only_bats(mesh, ids, ids, -dz, a1, a2, f2, BAT_MASS_1WING, batmount, battery)"
+    "    batids[i] = only_bats(mesh, ids, ids, -dz, a1, a2, f2, BAT_MASS_1WING, mount, battery)"
    ]
   },
   {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "062bc3f5",
    "metadata": {},
    "outputs": [
@@ -914,11 +914,27 @@
     }
    ],
    "source": [
-    "only_rails(mesh, stci[0], -dz, batteryRail, panelRib)\n",
-    "only_rails(mesh, stci[1], -dz, batteryRail, panelRib)\n",
-    "only_rails(mesh, stci[2], -dz, batteryRail, panelRib)\n",
-    "only_rails(mesh, sbci[1], dz, batteryRail, panelRib)\n",
-    "only_rails(mesh, sbci[2], dz, batteryRail, panelRib)"
+    "only_rails(mesh, stci[0], -dz, batteryRail, skin)\n",
+    "only_rails(mesh, stci[1], -dz, batteryRail, skin)\n",
+    "only_rails(mesh, stci[2], -dz, batteryRail, skin)\n",
+    "only_rails(mesh, sbci[1], dz, batteryRail, skin)\n",
+    "only_rails(mesh, sbci[2], dz, batteryRail, skin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ddf98bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beamids, batids = [[]]*(2*ntrig+1), [[]]*(2*ntrig+1)\n",
+    "for i, ids in zip(range(1,2*ntrig+1,2), sbci[1:-1]): #bottom batteries\n",
+    "    beamids[i], batids[i] = mc.bat_rail(mesh, ntrig, a1, a2, f2, din, dz, ids, \n",
+    "                                        batteryRail, battery, batmount, mount, BAT_MASS_1WING)\n",
+    "for i, ids in zip(range(0,2*ntrig+1,2), stci): #top batteries\n",
+    "    beamids[i], batids[i] = mc.bat_rail(mesh, ntrig, a1, a2, f2, din, -dz, ids, \n",
+    "                                        batteryRail, battery, batmount, mount, BAT_MASS_1WING)"
    ]
   },
   {
@@ -950,7 +966,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-397372.0836172189\n"
+      "-397333.5587824946\n"
      ]
     }
    ],
@@ -1013,7 +1029,16 @@
    "execution_count": 17,
    "id": "486cd3d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marri\\AppData\\Local\\Temp\\ipykernel_16388\\1609823797.py:4: MatrixRankWarning: Matrix is exactly singular\n",
+      "  uu = ssl.spsolve(KC0uu, fu)\n"
+     ]
+    }
+   ],
    "source": [
     "#checks and solution\n",
     "KC0uu = KC0[bu, :][:, bu]\n",
@@ -1043,12 +1068,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33b39d71fab24d3583e1bb26a5920dd1",
+       "model_id": "992a937f192c471580ff43103f92b456",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:59087/index.html?ui=P_0x25ba3fc04d0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:53620/index.html?ui=P_0x20506b21c40_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1058,7 +1083,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31260\n"
+      "30725\n"
      ]
     }
    ],
@@ -1119,12 +1144,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e3a107684a4593b8b51cb3ceeff1fc",
+       "model_id": "aff0695c59dc48f5a08043242e873661",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:59087/index.html?ui=P_0x25ba4b74e00_1&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:53620/index.html?ui=P_0x205060316a0_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1134,7 +1159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31260\n"
+      "30725\n"
      ]
     }
    ],
