Static indeterminacy confirmed

--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5ce43669",
    "metadata": {},
    "outputs": [],
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "062bc3f5",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-397333.5587824946\n"
+      "-397408.3296901074\n"
      ]
     }
    ],
@@ -1026,19 +1026,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "486cd3d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\marri\\AppData\\Local\\Temp\\ipykernel_16388\\1609823797.py:4: MatrixRankWarning: Matrix is exactly singular\n",
-      "  uu = ssl.spsolve(KC0uu, fu)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#checks and solution\n",
     "KC0uu = KC0[bu, :][:, bu]\n",
@@ -1061,19 +1052,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "0c6b00b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "992a937f192c471580ff43103f92b456",
+       "model_id": "adeda2aa32234ab9a5541c72147415ab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53620/index.html?ui=P_0x20506b21c40_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:54010/index.html?ui=P_0x2227e10c4d0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1083,7 +1074,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30725\n"
+      "31260\n"
      ]
     }
    ],
@@ -1144,12 +1135,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aff0695c59dc48f5a08043242e873661",
+       "model_id": "64bed1c56746432f8ee230fc33a8d222",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:53620/index.html?ui=P_0x205060316a0_1&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:54010/index.html?ui=P_0x2220906f860_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1159,7 +1150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30725\n"
+      "31260\n"
      ]
     }
    ],
