prep for stress calc

--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b5d32026",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e4083a16",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7beefe8b",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "274833c1",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7cc9141b",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "44d18b86",
    "metadata": {},
    "outputs": [],
@@ -133,6 +133,10 @@
     "        quad.update_KG(KGr, KGc, KGv, quad.shellprop)\n",
     "        quad.update_probe_finte(quad.shellprop)\n",
     "        quad.update_fint(fi, quad.shellprop)\n",
+    "\n",
+    "        \"stresses\"\n",
+    "        sigma_x_avg = quad.probe\n",
+    "\n",
     "    for beam in eleDict[\"beam\"]:\n",
     "        beam.update_probe_xe(ncoords_flatten)\n",
     "        beam.update_probe_ue(u)\n",
